--- a/public/asset/admin/css/layout.css
+++ b/public/asset/admin/css/layout.css
@@ -121,3 +121,14 @@ a[data-toggle="collapse"] {
     width: 100%;
     margin-bottom: 40px;
 }
+
+.err_input {
+    color: red;
+    font-weight: 400;
+    margin-top: 10px;
+    font-size: 15px;
+}
+
+.input_error{
+    border: 1px solid red !important;
+}
