--- a/public/asset/user/css/style.css
+++ b/public/asset/user/css/style.css
@@ -1057,9 +1057,9 @@ textarea.input {
   width: 40px;
   height: 40px;
   line-height: 38px;
-  color: #D10024;
+/*  color: #D10024;
   opacity: 0;
-  visibility: hidden;
+  visibility: hidden;*/
 }
 
 .product .add-to-cart .add-to-cart-btn:hover {
@@ -1548,12 +1548,12 @@ textarea.input {
   position: absolute;
   left: 0;
   top: 0;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   line-height: 38px;
-  color: #D10024;
+  /*color: #D10024;
   opacity: 0;
-  visibility: hidden;
+  visibility: hidden;*/
 }
 
 .product-details .add-to-cart .add-to-cart-btn:hover {
