--- a/public/asset/user/css/style.css
+++ b/public/asset/user/css/style.css
@@ -2131,6 +2131,10 @@ textarea.input {
   margin: 15px 0px;
 }
 
+#content {
+  margin: 30px 0;
+}
+
 /*=========================================================
 	13 -> RESPONSIVE
 ===========================================================*/
