--- a/public/asset/user/css/style.css
+++ b/public/asset/user/css/style.css
@@ -724,7 +724,7 @@ textarea.input {
   top: 0;
   bottom: 0;
   left: 0px;
-  width: 60%;
+  width: 30%;
   background: #D10024;
   opacity: 0.9;
   -webkit-transform: skewX(-45deg);
@@ -759,16 +759,16 @@ textarea.input {
 }
 
 .shop:hover .shop-img>img {
-  -webkit-transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  transform: scale(1.1);
+  -webkit-transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  transform: scale(1.5);
 }
 
 .shop .shop-body {
   position: absolute;
   top: 0;
   width: 75%;
-  padding: 30px;
+  padding: 30px 30px 30px 10px;
   z-index: 10;
 }
 
