--- a/public/asset/user/css/style.css
+++ b/public/asset/user/css/style.css
@@ -724,12 +724,12 @@ textarea.input {
   top: 0;
   bottom: 0;
   left: 0px;
-  width: 30%;
+  width: 20%;
   background: #D10024;
   opacity: 0.9;
-  -webkit-transform: skewX(-45deg);
-  -ms-transform: skewX(-45deg);
-  transform: skewX(-45deg);
+  -webkit-transform: skewX(-55deg);
+  -ms-transform: skewX(-55deg);
+  transform: skewX(-55deg);
 }
 
 .shop:after {
@@ -741,9 +741,9 @@ textarea.input {
   width: 100%;
   background: #D10024;
   opacity: 0.9;
-  -webkit-transform: skewX(-45deg) translateX(-100%);
-  -ms-transform: skewX(-45deg) translateX(-100%);
-  transform: skewX(-45deg) translateX(-100%);
+  -webkit-transform: skewX(-55deg) translateX(-100%);
+  -ms-transform: skewX(-55deg) translateX(-100%);
+  transform: skewX(-55deg) translateX(-100%);
 }
 
 .shop .shop-img {
@@ -759,9 +759,9 @@ textarea.input {
 }
 
 .shop:hover .shop-img>img {
-  -webkit-transform: scale(1.5);
-  -ms-transform: scale(1.5);
-  transform: scale(1.5);
+  -webkit-transform: scale(1.3);
+  -ms-transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 .shop .shop-body {
@@ -771,7 +771,6 @@ textarea.input {
   padding: 30px 30px 30px 10px;
   z-index: 10;
 }
-
 .shop .shop-body h3 {
   color: #FFF;
 }
@@ -1096,6 +1095,7 @@ textarea.input {
 
 .product-widget .product-img>img {
   width: 100%;
+  height: 55px;
 }
 
 .product-widget .product-body {
