--- a/public/asset/admin/css/layout.css
+++ b/public/asset/admin/css/layout.css
@@ -5,9 +5,9 @@ body {
     background: #e0e0e0;
 }
 
-a,
-a:hover,
-a:focus {
+#sidebar a,
+#sidebar a:hover,
+#sidebar a:focus {
     color: inherit;
     text-decoration: none;
     transition: all 0.3s;
