--- a/public/asset/user/css/style.css
+++ b/public/asset/user/css/style.css
@@ -1043,9 +1043,9 @@ textarea.input {
 
 .product .add-to-cart {
   position: absolute;
-  left: 1px;
-  right: 1px;
-  bottom: 1px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
   padding: 15px;
   background: #1e1f29;
   text-align: center;
@@ -1070,7 +1070,7 @@ textarea.input {
 
 .product .add-to-cart .add-to-cart-btn {
   position: relative;
-  border: 2px solid transparent;
+  border: 2px solid black;
   height: 40px;
   padding: 0 30px;
   background-color: #ef233c;
@@ -1098,7 +1098,7 @@ textarea.input {
   background-color: #fff;
   color: #d10024;
   border-color: #d10024;
-  padding: 0px 30px 0px 50px;
+  /padding: 0px 30px 0px 50px;
 }
 
 .product .add-to-cart .add-to-cart-btn:hover > i {
@@ -1574,7 +1574,7 @@ textarea.input {
 
 .product-details .add-to-cart .add-to-cart-btn {
   position: relative;
-  border: 2px solid transparent;
+  border: 2px solid black;
   height: 40px;
   padding: 0 30px;
   background-color: #ef233c;
