--- a/public/asset/user/css/style.css
+++ b/public/asset/user/css/style.css
@@ -588,7 +588,7 @@ textarea.input {
 }
 
 .cart-dropdown .cart-list .product-widget {
-  padding: 0px;
+  padding: 0px 5px;
   -webkit-box-shadow: none;
   box-shadow: none;
 }
@@ -941,6 +941,14 @@ textarea.input {
 .product .product-body .product-name {
   text-transform: uppercase;
   font-size: 14px;
+  word-break: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 16px; 
+  height: 32px; 
+  -webkit-line-clamp: 2; /* number of lines to show */
+  -webkit-box-orient: vertical;
 }
 
 .product .product-body .product-name > a {
@@ -1046,7 +1054,7 @@ textarea.input {
   left: 0px;
   right: 0px;
   bottom: 0px;
-  padding: 15px;
+  padding: 10px;
   background: #1e1f29;
   text-align: center;
   -webkit-transform: translateY(0%);
@@ -1058,19 +1066,19 @@ textarea.input {
 }
 
 .product:hover .add-to-cart {
-  -webkit-transform: translateY(10%);
-  -ms-transform: translateY(10%);
-  transform: translateY(10%);
+  -webkit-transform: translateY(0%);
+  -ms-transform: translateY(0%);
+  transform: translateY(0%);
 }
 .product:hover .product-body {
-  -webkit-transform: translateY(-80%);
-  -ms-transform: translateY(-80%);
-  transform: translateY(-80%);
+  -webkit-transform: translateY(-60%);
+  -ms-transform: translateY(-60%);
+  transform: translateY(-60%);
 }
 
 .product .add-to-cart .add-to-cart-btn {
   position: relative;
-  border: 2px solid black;
+  border: 2px solid transparent;
   height: 40px;
   padding: 0 30px;
   background-color: #ef233c;
@@ -1084,11 +1092,12 @@ textarea.input {
 
 .product .add-to-cart .add-to-cart-btn > i {
   position: absolute;
-  left: 0;
+  left: 15%;
   top: 0;
   width: 40px;
   height: 40px;
   line-height: 38px;
+
   /*  color: #D10024;
   opacity: 0;
   visibility: hidden;*/
@@ -1098,7 +1107,7 @@ textarea.input {
   background-color: #fff;
   color: #d10024;
   border-color: #d10024;
-  /padding: 0px 30px 0px 50px;
+  padding: 0px 30px 0px 40px;
 }
 
 .product .add-to-cart .add-to-cart-btn:hover > i {
@@ -1115,15 +1124,13 @@ textarea.input {
 }
 
 .product-widget + .product-widget {
-  margin: 30px 0px;
+  margin: 20px 5px;
 }
 
 .product-widget .product-img {
   position: absolute;
-  left: 0px;
-  top: 0px;
   width: 60px;
-  margin-left: 10px;
+  margin-left: 15px;
 }
 
 .product-widget .product-img > img {
@@ -1145,10 +1152,20 @@ textarea.input {
 .product-widget .product-body .product-name {
   text-transform: uppercase;
   font-size: 12px;
+  font-weight: 500;
+  word-break: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  line-height: 14px; 
+  height: 28px; 
+  -webkit-line-clamp: 2; /* number of lines to show */
+  -webkit-box-orient: vertical;
 }
 
 .product-widget .product-body .product-name > a {
   font-weight: 500;
+  height: 28px; 
 }
 
 .product-widget .product-body .product-name > a:hover,
@@ -1574,7 +1591,7 @@ textarea.input {
 
 .product-details .add-to-cart .add-to-cart-btn {
   position: relative;
-  border: 2px solid black;
+  border: 2px solid transparent;
   height: 40px;
   padding: 0 30px;
   background-color: #ef233c;
@@ -1588,7 +1605,7 @@ textarea.input {
 
 .product-details .add-to-cart .add-to-cart-btn > i {
   position: absolute;
-  left: 0;
+  left: 5%;
   top: 0;
   width: 50px;
   height: 50px;
@@ -2193,6 +2210,57 @@ textarea.input {
 
 #content {
   margin: 30px 0;
+}
+
+
+
+
+
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 /*=========================================================
